# ftdi-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
console/: Cargo.toml  build.rs  log4rs.yaml
console/examples/: find_all.rs  serial_test.rs  simple.rs
console/src/: main.rs
ftdi_library/: Cargo.toml  build.rs
ftdi_library/src/: constants_test.rs  lib.rs
ftdi_library/src/ftdi/: constants.rs  core.rs  eeprom.rs  ftdi_context.rs  ftdi_device_list.rs  ftdi_version_info.rs  mod.rs
src/: lib.rs
src/ftdi/: constants.rs  core.rs  eeprom.rs  mod.rs
