[package]
name = "console"
version = "0.1.0"
authors = ["Yuriy Larin"]
license = "MIT/Apache-2.0/BSD-3-Clause"
repository = "https://github.com/blandger/ftdi-rust"
homepage = "https://github.com/blandger/ftdi-rust"
edition = "2018"
description = "Console application to check and use Rust library for FTDI chips"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftdi_library = { path = "../ftdi_library" }