[package]
name = "console"
version = "0.1.0"
authors = ["Yuriy Larin"]
license = "MIT/Apache-2.0/BSD-3-Clause"
repository = "https://github.com/blandger/ftdi-rust"
homepage = "https://github.com/blandger/ftdi-rust"
edition = "2018"
description = "Console application to check and use Rust library for FTDI chips"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
ftdi_library = { path = "../ftdi_library" }
libusb-sys = "0.2.3"
#libusb-sys = { path = "../../libusb-sys" }
log = "0.4.11"
log4rs = "0.12"
signal-hook = "0.1.16"
clap = "2.3"
snafu = { version = "0.6.9", features = ["backtrace"] }

[build-dependencies]
pkg-config = "0.3.2"