[package]
name = "ftdi_library"
version = "0.1.0"
authors = ["Yuriy Larin"]
license = "MIT/Apache-2.0/BSD-3-Clause"
repository = "https://github.com/blandger/ftdi-rust"
homepage = "https://github.com/blandger/ftdi-rust"
edition = "2018"
description = "Rust library for FTDI chips"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
libusb-sys = "0.2.3"
#libusb-sys = { path = "../../libusb-sys" }
bytes = "0.5.4"
snafu = { version = "0.6.9", features = ["backtrace"] }
log = { version = "0.4.11", features = ["max_level_debug", "release_max_level_warn"] }
#log4rs = "0.12"
linuxver = "0.1.0"

#pkg-config = "0.3.2"